--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,9 @@
 html{
-    position: static;
     font-size: 62.5%;
     height: 2000px;
 }
 body{
+    position: relative;
     list-style:none;
     font-size: 1.6rem;
     font-family: 'Poppins', sans-serif;
@@ -19,7 +19,6 @@ a {
     flex-direction: column;
     justify-content: center;
     text-align: center;
-    margin-left: 70px;
     width: 144px;
     height: 50px;
     background-color: #171100;
@@ -27,13 +26,15 @@ a {
 }
 .content{
     max-width: calc(100% - 48px);
-    /* background-color: orange; */
     width: 1170px;
     margin-left:auto;
     margin-right: auto;
 }
-.header{
-    margin-top: 44px;
+
+.header.fixed{
+    position: sticky;
+    top: -36px;
+    padding: 44px 0px 8px;
     
 }
 .header .nav-bar{
@@ -59,6 +60,9 @@ line-height: 1.75; /* 175% */
 .nav-bar .btn a{
     color: #fff;
 }
+.nav-bar .btn{
+    margin-left: 70px;
+}
 .nav-bar .active{
   display: flex ;
 justify-content: center;
@@ -80,25 +84,25 @@ justify-content: center;
 }
 /* hero */
 .hero{
-   margin-top: 64px;
+   margin: 65px 0;  
 }
-.hero .content {
+.hero .arrow-hero {
     display: flex;
 }
 .hero .img-hero{
     position: relative;
-    width: 50%;
+    width: 48%;
 }
 .hero .content-hero{
     margin-left: 130px;
-    width: 50%;
+    width: 52%;
 }
 .hero .img-child{
     background-color: #fff;
     position: absolute;
     border-radius: 12px;
     bottom: -72px;
-    right: -35px;
+    right: -100px;
     width: 270px;
     height: 244px;
 }
@@ -109,6 +113,8 @@ justify-content: center;
 }
 .hero .img-child .cover-img-child{
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .hero .img-child .content-img-child{
     margin-left: 16px;
@@ -134,7 +140,7 @@ line-height: 1.67; /* 166.667% */
     margin-left: 130px;
 }
 .content-hero .text .title{
-margin-top: 128px;
+margin-top: 64px;
 color: #171100;
 font-family: 'Sen', sans-serif;
 font-size: 5.8rem;
@@ -153,7 +159,54 @@ font-weight: 400;
 line-height: 1.67; /* 166.667% */
 }
 .content-hero .see-more{
+    margin-top: 38px;
     display: flex;
-    justify-content: center;
     align-items: center;
+}
+.content-hero .see-more .btn-see-more{
+    border-radius: 32px;
+    background: #FFB900;
+    width: 180px;
+    height: 64px;
+}
+.content-hero .see-more .img-arrow{
+    margin-left: 28px;
+}
+.content-hero .see-more .desc{
+color: #171100;
+font-family: Poppins;
+font-size: 1.8rem;
+font-style: normal;
+font-weight: 600;
+line-height: 1.67; /* 166.667% */
+}
+
+.content-hero .rate-students{
+    margin-top: 48px;
+}
+.cover-quantity .quantity .desc{
+    color: #5F5B53;
+    font-family: Poppins;
+    font-size: 1.8rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+}
+.cover-quantity .quantity .desc:first-child{
+color: #171100;
+font-family: Sen;
+font-size: 4.4rem   ;
+font-style: normal;
+font-weight: 700;
+line-height: 1.28   ; /* 122.727% */
+}
+.content-hero .cover-quantity {
+   margin-top: 8px;  
+   display: flex;
+}
+.content-hero .cover-quantity .desc{
+    display: inline-block;
+}
+#quantity-1{
+    margin-left: 28px;
 }
