--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,6 @@ html{
     height: 2000px;
 }
 body{
-    position: relative;
     list-style:none;
     font-size: 1.6rem;
     font-family: 'Poppins', sans-serif;
@@ -102,6 +101,7 @@ justify-content: center;
     color: #171100;
     text-shadow: 1px 0 0 currentColor; 
 }
+
 .nav-bar .active a::after{
     position: relative;
     display: block;
@@ -302,7 +302,6 @@ line-height: 1.67   ; /* 166.667% */
     border: 1px solid #5F5B53;
     border-radius: 50%;
     background-color: #fff; 
-    flex-shrink: 0;
 }
 .row-icon button:first-child{
     margin-right: 16px;
@@ -321,14 +320,14 @@ line-height: 1.67   ; /* 166.667% */
 }
 
 /* ....img-popular....... */
+
 .img-popular{
     display: flex;
     gap: 30px;
     margin-top: 55px;
 }
 .img-popular .img-child{
-   
-    flex: 1;
+    width: 370px;
 }
 .img-popular .img-child .child{
     border-radius: 12px 12px 0px 0px;
@@ -339,6 +338,7 @@ line-height: 1.67   ; /* 166.667% */
 }
 
 .img-popular .cover .desc{
+    width: 326px;
     margin-top: 6px;
     color: #5F5B53;
     font-family: Poppins;
@@ -431,23 +431,22 @@ line-height: 1.86; /* 185.714% */
     left: -30px;
 }
 
-/* disscusion */
-.disscusion{
+/*.feature-1 */
+.feature-1{
     margin-top: 200px;
 }
-.disscusion .img-content .img-first{
+.feature-1 .img-content .img-first:nth-child(1){
+    margin-top:34px;
+    
+}
+.feature-1 .img-content .img-first{
     border-radius: 16px;
     width: 270px;
     height: 404px;
     object-fit: cover;
 }
-.disscusion .img-content .img-first:first-child{
-   
-    padding-top:20px;
+.feature-1 .img-content .img-first:first-child{
     border-radius: 16px;
-    background-color: yellow;
-     margin-top: 20px;
-
 }
 .cover-img-discussion{
 
@@ -455,7 +454,8 @@ display: flex;
 }
 .cover-img-discussion .img-content{
     width: 50%;
-    border-radius: 16px;
+    display: flex;
+    gap: 0 30px;
 }
 .cover-img-discussion .info{
     width: 50%;
@@ -472,6 +472,7 @@ line-height: 1.26; /* 126.316% */
 letter-spacing: -0.76px;
 }
 .cover-img-discussion .info .desc{
+    margin-top: 16px;
 width: 458px;
 --line-clamp:2;
 color: #5F5B53;
@@ -481,12 +482,158 @@ font-style: normal;
 font-weight: 400;
 line-height: 1.75; /* 175% */
 }
-.cover-img-discussion .info .desc:nth-child(2){
-    margin-top: 16px;
-}
 .cover-img-discussion .info .btn{
     margin-top: 32px;
     background-color: #FFB900;
     width: 137px;
     color:#fff;
 }
+/* /feature-2   */
+
+.feature-2{
+    padding: 200px 0 200px 0;
+}
+.feature-2 .cover{
+    display: flex;  
+}
+.feature-2 .cover .info .title, .cover .info .desc{
+    width: 570px;
+}
+.feature-2 .cover .info .desc{
+    margin-top: 16px;
+    color: #5F5B53;
+    font-family: Poppins;
+    font-size: 1.6rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.75; /* 175% */
+}
+
+.feature-2 .info .btn{
+    margin-top: 32px;
+    background-color: #FFB900;
+    width: 137px;
+    color:#fff;
+    margin-left: 0px;
+}
+.feature-2 .img-feature-2 .child{
+    border-radius: 20px;
+    margin-left: 130px;
+    width: 470px;
+    height: 440px;
+    object-fit: cover;
+}
+/* ourblog */
+
+.ourblog{
+    margin-top: 135px;
+    padding:96px 0;
+    background-color: #FFFCF4;
+}
+.ourblog .block-top{
+    text-align: center;
+}
+.ourblog .block-top .desc{
+    margin: 16px auto auto;
+    width: 448px;
+color: #696262;
+text-align: center;
+font-family: Poppins;
+font-size: 1.6rem;
+font-style: normal;
+font-weight: 400;
+line-height: 1.75; /* 175% */
+}
+.ourblog .blog-list{
+    margin-top: 55px;
+    display: flex;
+    flex: 1;
+    gap: 30px;
+}
+.ourblog .blog-list .item{
+    width: calc(33.33% - 30px);
+}
+.ourblog .blog-list .thumb{
+    width: 370px;
+    height: 250px;
+    object-fit: cover;
+    border-radius: 16px 16px 0px 0px;   
+}
+
+.ourblog .blog-list .highlight::before{
+    display: inline-block;
+    content: "";
+    position: relative;
+    width: 6px; 
+    height: 6px;
+    border-radius: 50%;
+    background-color: #FFB900;
+    margin-right: 4px;
+}
+.ourblog .blog-list .info{
+    padding:20px 20px 28px;
+}
+   .ourblog .blog-list .highlight{
+     color: #5F5B53;
+    font-family: Poppins;
+    font-size: 1.4rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px; /* 185.714% */
+    display: flex;
+    margin-top: 20px;
+    align-items:center;
+
+   }
+   .ourblog .blog-list .hr{
+    margin-top: 12px;
+    width: 160px;
+    height: 1px;
+    border-radius: 0.5px;
+    background: #E2DFDA;
+   }
+   .ourblog .blog-list .info .title{
+    width: 330px;
+    margin-top: 12px;
+    color: #171100;
+    font-family: Poppins;
+    font-size: 1.6rem;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 1.75; /* 175% */
+   }
+   
+   .ourblog .blog-list .info .btn{
+    margin-top: 12px;
+    width: 118px;
+    height: 50px;
+    color: #fff;
+   }
+   .ourblog .blog-list .item{
+    border-radius: 16px;
+    color: #fff;
+   }
+   .ourblog .blog-list .item:hover{
+    box-shadow: 0 16px 32px rgba(0, 0, 0, 0.05);
+   }
+  .blog-list .info .btn-more{
+    background-color: #FFB900;
+   }
+   .dot-blog{
+    text-align: center;
+   }
+   .ourblog .dot-blog{
+    margin-top: 38px;
+   }
+  .dot{
+    display: inline-block;
+    cursor: pointer;
+    width: 6px;
+    background-color: #5F5B53;
+    height: 6px;
+    border-radius: 999px;
+   }
+   .ourblog .dot-blog .dot:hover {
+    background-color: yellow;
+    cursor: default;
+   }
